@@ -1,5 +1,6 @@
 - bootloader configuration:
   o add support for crypted grub2 passwords
+  o grub2: fix setting default entry when in a submenu (mga#18560)
 
 Version 17.41 - 20 June 2016
 
